--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-svg": "^13.14.0",
     "react-native-toast-message": "^2.1.7",
     "sp-react-native-mqtt": "^0.5.1"
   },
