--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
     "lottie-react-native": "^6.4.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-feather": "^1.1.2",
+    "react-native-gesture-handler": "^2.13.4",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0",
     "react-native-sound": "^0.11.2",
     "react-native-svg": "^13.14.0",
     "react-native-toast-message": "^2.1.7",
