--- a/package.json
+++ b/package.json
@@ -28,20 +28,26 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
+    "@babel/preset-typescript": "^7.23.3",
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.4.0",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/jest": "^29.5.10",
     "@types/react": "^18.0.24",
     "@types/react-native-dotenv": "^0.2.2",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.2.1",
+    "@types/react-test-renderer": "^18.0.7",
+    "babel-jest": "^29.7.0",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
     "react-native-dotenv": "^3.4.9",
     "react-test-renderer": "18.2.0",
+    "ts-node": "^10.9.1",
     "typescript": "4.8.4"
   },
   "engines": {
