--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-sound": "^0.11.2",
     "react-native-svg": "^13.14.0",
     "react-native-toast-message": "^2.1.7",
-    "sp-react-native-mqtt": "^0.5.1"
+    "sp-react-native-mqtt": "^0.5.1",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
