--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "^2.13.4",
+    "react-native-mmkv": "^2.11.0",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-sound": "^0.11.2",
