--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "adb-reverse": "adb reverse tcp:9090 tcp:9090 && adb reverse tcp:4000 tcp:4000 && adb reverse tcp:8443 tcp:8443 && adb reverse tcp:8097 tcp:8097"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.11",
